--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,136 @@
+@font-face {
+  font-family: "Alegreya";
+  src: local("Alegreya"),
+    url(./Assets/font/Alegreya/Alegreya-Medium.ttf) format("ttf");
+}
 body {
+  font-family: "Alegreya";
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  /* background-image:  */
+  background-color: grey;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+ul {
+  padding: 0;
+  list-style-type: none;
+  border: 1px;
+  border-color: black;
+  margin-top: 0;
+  margin-left: 0;
+  width: 50%;
+  margin: auto;
+}
+.center-block {
+  margin: auto;
+  display: block;
+  margin-top: 20px;
+  width: 50%;
+  height: 37px;
+  border-radius: 9px;
+  border: none;
+}
+.border {
+  border: 0.2px solid black;
+  border-radius: 3px;
+  height: 41px;
+  margin: auto;
+  display: block;
+  /* display: inline-block; */
+  padding-top: 5px;
+  /* margin-left: 157px;*/
+}
+.border-container {
+  text-align: center;
+}
+.header {
+  background-color: black;
+  margin-top: 0;
+  height: 60px;
+}
+.logo {
+  height: 67px;
+  width: 92px;
+  display: block;
+  margin: auto;
+}
+li {
+  list-style-type: none;
+  border: 1px;
+  border-color: black;
+}
+label {
+  font-size: 11px;
+}
+.login {
+  display: block;
+  margin: auto;
+  width: 12%;
+}
+.user {
+  outline: 0;
+  border-width: 0 0 1.3px;
+  border-color: black;
+  background-color: grey;
+  height: 30px;
+  width: 250px;
+}
+.loginbutton {
+  height: 50px;
+  width: 130px;
+  border-radius: 5px;
+  background-color: black;
+  color: gold;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+.logout {
+  color: goldenrod;
+  float: right;
+  margin-top: -49px;
+  margin-right: 20px;
+}
+.content {
+  background-color: black;
+  color: white;
+  display: block;
+  margin: auto;
+  width: 50%;
+  /* border: 1px solid; */
+  padding: 10px;
+  box-shadow: 5px 3px darkgrey;
+  margin-top: 50px;
+}
+.details {
+  flex-direction: column;
+  justify-content: space-around;
+}
+.loginas {
+  float: right;
+  font-style: italic;
+  font-size: 12px;
+  margin-right: 108px;
+  position: relative;
+  margin-top: -46px;
+  color: white;
+}
+span {
+  font-weight: bold;
+}
+.background {
+  width: 100%;
+  height: 100px;
+  background-image: url("./Assets/bg.jpeg");
+}
+.wrong {
+  font-size: 13px;
+  color: #8b0000;
+  width: max-content;
 }
